<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/onboarding_bg"
        android:contentDescription="@string/none" />

    <LinearLayout
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solar_system"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.15"
            android:textSize="28sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_gravity="start"
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="20dp"
            app:lottie_rawRes="@raw/arrow"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>